force-app/main/default/objects/clofor_com_cfs__WMSBillACBal__c/fields/clofor_com_cfs__ACBalanceStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalanceStartDate__c</fullName>
    <label>A/C BALANCE START DATE</label>
    <type>Date</type>
</CustomField>