force-app/main/default/objects/clofor_com_cfs__WMSBillACBal__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingLocalACBal__c</fullName>
    <label>UNRECEIVED BAL OF SELLING(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>