force-app/main/default/objects/clofor_com_cfs__WMSBillACBal__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingLocalFormula__c</fullName>
    <formula>clofor_com_cfs__WMSBillID__r.clofor_com_cfs__UnreceivedBalanceLocal__c</formula>
    <label>UNRECEIVED BAL OF SELLING(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>