force-app/main/default/objects/clofor_com_cfs__WMSBillACBal__c/fields/clofor_com_cfs__WMSBillID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSBillID__c</fullName>
    <label>WMS BILL ID</label>
    <referenceTo>clofor_com_cfs__Billing__c</referenceTo>
    <relationshipLabel>WMS BILL+A/C BAL</relationshipLabel>
    <relationshipName>WMSBillIDACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>